--- a/interlinkai/package.json
+++ b/interlinkai/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "lucide-react": "^0.501.0",
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "install": "^0.13.0",
+    "npm": "^11.3.0",
     "postcss": "^8",
     "prisma": "^6.6.0",
     "tailwindcss": "^3.4.1",
